Fix sort condition of walkLog, comment, reaction
산책 기록은 최신순 정렬 (sort createdAt reversed)
댓글은 오래된순 정렬 (sort createdAt)
리액션은 최신순 정렬 (sort createdAt reversed)